cmake_minimum_required(VERSION 3.21)
project(Interview)

set(CMAKE_CXX_STANDARD 14)

add_executable(Interview main.cpp Questions.h BinarySearch.cpp QuickSort.cpp TwoSum.cpp FastPow.cpp HeapSort.cpp FibonacciSequence.cpp ClimbStairs.cpp Permutations.cpp WordBreak.cpp LongestPalindrome.cpp MinHalf.cpp Practice.cpp LinkedList.cpp LinkedList.h ListQuestion.cpp)
